--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 17:07 -->
+<!-- 2022-10-22 19:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -36,17 +36,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3d02e34">1. 一大早</a></li>
-<li><a href="#orga4affe7">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org18349a8">3. 科研训练</a></li>
-<li><a href="#orgbb3b531">4. 520</a></li>
+<li><a href="#orgf024dd9">1. 一大早</a></li>
+<li><a href="#org839cee7">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org903a04c">3. 科研训练</a></li>
+<li><a href="#orgdb11093">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org3d02e34" class="outline-2">
-<h2 id="org3d02e34"><span class="section-number-2">1.</span> <a href="#org3d02e34">一大早</a></h2>
+<div id="outline-container-orgf024dd9" class="outline-2">
+<h2 id="orgf024dd9"><span class="section-number-2">1.</span> <a href="#orgf024dd9">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga4affe7" class="outline-2">
-<h2 id="orga4affe7"><span class="section-number-2">2.</span> <a href="#orga4affe7">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org839cee7" class="outline-2">
+<h2 id="org839cee7"><span class="section-number-2">2.</span> <a href="#org839cee7">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +82,8 @@
 </div>
 </div>
 
-<div id="outline-container-org18349a8" class="outline-2">
-<h2 id="org18349a8"><span class="section-number-2">3.</span> <a href="#org18349a8">科研训练</a></h2>
+<div id="outline-container-org903a04c" class="outline-2">
+<h2 id="org903a04c"><span class="section-number-2">3.</span> <a href="#org903a04c">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +91,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbb3b531" class="outline-2">
-<h2 id="orgbb3b531"><span class="section-number-2">4.</span> <a href="#orgbb3b531">520</a></h2>
+<div id="outline-container-orgdb11093" class="outline-2">
+<h2 id="orgdb11093"><span class="section-number-2">4.</span> <a href="#orgdb11093">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 17:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
