--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 17:07 -->
+<!-- 2022-10-22 19:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -36,9 +36,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0ef72ca">1. 水水体育课</a></li>
-<li><a href="#orgecf9031">2. 又是一轮毕业季</a></li>
-<li><a href="#org1d51ad7">3. 520 点灯</a></li>
+<li><a href="#org14a1dd2">1. 水水体育课</a></li>
+<li><a href="#orgbc16a2f">2. 又是一轮毕业季</a></li>
+<li><a href="#org8f21f9f">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -47,8 +47,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-org0ef72ca" class="outline-2">
-<h2 id="org0ef72ca"><span class="section-number-2">1.</span> <a href="#org0ef72ca">水水体育课</a></h2>
+<div id="outline-container-org14a1dd2" class="outline-2">
+<h2 id="org14a1dd2"><span class="section-number-2">1.</span> <a href="#org14a1dd2">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -56,8 +56,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgecf9031" class="outline-2">
-<h2 id="orgecf9031"><span class="section-number-2">2.</span> <a href="#orgecf9031">又是一轮毕业季</a></h2>
+<div id="outline-container-orgbc16a2f" class="outline-2">
+<h2 id="orgbc16a2f"><span class="section-number-2">2.</span> <a href="#orgbc16a2f">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -76,8 +76,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1d51ad7" class="outline-2">
-<h2 id="org1d51ad7"><span class="section-number-2">3.</span> <a href="#org1d51ad7">520 点灯</a></h2>
+<div id="outline-container-org8f21f9f" class="outline-2">
+<h2 id="org8f21f9f"><span class="section-number-2">3.</span> <a href="#org8f21f9f">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -95,7 +95,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="org4a476e5">
+<figure id="org3def410">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -107,7 +107,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:56</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 17:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
