--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 17:07 -->
+<!-- 2022-10-22 19:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org746ac84">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org5c2357f">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org7695075">1.1. window config &amp; register</a></li>
-<li><a href="#org8eca78d">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orga987612">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org6c439f9">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org50cd443">1.1. window config &amp; register</a></li>
+<li><a href="#org7768b61">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org4e2f739">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org88dc489">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org746ac84" class="outline-2">
-<h2 id="org746ac84"><span class="section-number-2">1.</span> <a href="#org746ac84">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org5c2357f" class="outline-2">
+<h2 id="org5c2357f"><span class="section-number-2">1.</span> <a href="#org5c2357f">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org7695075" class="outline-3">
-<h3 id="org7695075"><span class="section-number-3">1.1.</span> <a href="#org7695075">window config &amp; register</a></h3>
+<div id="outline-container-org50cd443" class="outline-3">
+<h3 id="org50cd443"><span class="section-number-3">1.1.</span> <a href="#org50cd443">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org8eca78d" class="outline-3">
-<h3 id="org8eca78d"><span class="section-number-3">1.2.</span> <a href="#org8eca78d"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org7768b61" class="outline-3">
+<h3 id="org7768b61"><span class="section-number-3">1.2.</span> <a href="#org7768b61"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orga987612" class="outline-3">
-<h3 id="orga987612"><span class="section-number-3">1.3.</span> <a href="#orga987612"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org4e2f739" class="outline-3">
+<h3 id="org4e2f739"><span class="section-number-3">1.3.</span> <a href="#org4e2f739"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org6c439f9" class="outline-3">
-<h3 id="org6c439f9"><span class="section-number-3">1.4.</span> <a href="#org6c439f9"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org88dc489" class="outline-3">
+<h3 id="org88dc489"><span class="section-number-3">1.4.</span> <a href="#org88dc489"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 17:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
