--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 17:07 -->
+<!-- 2022-10-22 19:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -36,13 +36,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org73b7dd6">1. What is Vectored IO</a></li>
-<li><a href="#orgb13cea6">2. Vectored IO in Linux</a></li>
-<li><a href="#orgb30aa2d">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#orge595079">4. Examples</a>
+<li><a href="#org649dd15">1. What is Vectored IO</a></li>
+<li><a href="#orgd0b2a77">2. Vectored IO in Linux</a></li>
+<li><a href="#org6afd434">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org8b2c843">4. Examples</a>
 <ul>
-<li><a href="#org647ba57">4.1. <code>write()</code></a></li>
-<li><a href="#org28da8da">4.2. <code>writev()</code></a></li>
+<li><a href="#org8c62e89">4.1. <code>write()</code></a></li>
+<li><a href="#org0ef0222">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -58,8 +58,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org73b7dd6" class="outline-2">
-<h2 id="org73b7dd6"><span class="section-number-2">1.</span> <a href="#org73b7dd6">What is Vectored IO</a></h2>
+<div id="outline-container-org649dd15" class="outline-2">
+<h2 id="org649dd15"><span class="section-number-2">1.</span> <a href="#org649dd15">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -70,8 +70,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orgb13cea6" class="outline-2">
-<h2 id="orgb13cea6"><span class="section-number-2">2.</span> <a href="#orgb13cea6">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgd0b2a77" class="outline-2">
+<h2 id="orgd0b2a77"><span class="section-number-2">2.</span> <a href="#orgd0b2a77">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -109,8 +109,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgb30aa2d" class="outline-2">
-<h2 id="orgb30aa2d"><span class="section-number-2">3.</span> <a href="#orgb30aa2d">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org6afd434" class="outline-2">
+<h2 id="org6afd434"><span class="section-number-2">3.</span> <a href="#org6afd434">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -127,12 +127,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-orge595079" class="outline-2">
-<h2 id="orge595079"><span class="section-number-2">4.</span> <a href="#orge595079">Examples</a></h2>
+<div id="outline-container-org8b2c843" class="outline-2">
+<h2 id="org8b2c843"><span class="section-number-2">4.</span> <a href="#org8b2c843">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org647ba57" class="outline-3">
-<h3 id="org647ba57"><span class="section-number-3">4.1.</span> <a href="#org647ba57"><code>write()</code></a></h3>
+<div id="outline-container-org8c62e89" class="outline-3">
+<h3 id="org8c62e89"><span class="section-number-3">4.1.</span> <a href="#org8c62e89"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -155,8 +155,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org28da8da" class="outline-3">
-<h3 id="org28da8da"><span class="section-number-3">4.2.</span> <a href="#org28da8da"><code>writev()</code></a></h3>
+<div id="outline-container-org0ef0222" class="outline-3">
+<h3 id="org0ef0222"><span class="section-number-3">4.2.</span> <a href="#org0ef0222"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -197,7 +197,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 17:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
