--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-22 17:07 -->
+<!-- 2022-10-22 19:03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -37,7 +37,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2de998e">1. 文章列表</a></li>
+<li><a href="#orgdf52bcd">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -47,18 +47,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orga48f26d">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org6caa6b6">1</a> 所示.
 </p>
 
 
-<figure id="orga48f26d">
+<figure id="org6caa6b6">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org2de998e" class="outline-2">
-<h2 id="org2de998e"><span class="section-number-2">1.</span> <a href="#org2de998e">文章列表</a></h2>
+<div id="outline-container-orgdf52bcd" class="outline-2">
+<h2 id="orgdf52bcd"><span class="section-number-2">1.</span> <a href="#orgdf52bcd">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -66,6 +66,11 @@
 <ul class="org-ul">
 <li><a href="content/qq-group-export.html">导出QQ群成员</a></li>
 <li><a href="content/gadgets.html">我的小玩意们</a></li>
+<li>collections
+<ul class="org-ul">
+<li><a href="content/collections/life-tips.html">生活小贴士</a></li>
+<li><a href="content/collections/index.html">收藏夹</a></li>
+</ul></li>
 <li>linux
 <ul class="org-ul">
 <li><a href="content/linux/vectored-io.html">Vectored IO</a></li>
@@ -81,10 +86,6 @@
 <li><a href="content/daily/2021-05-19.html">不知道要写啥的第二篇日记</a></li>
 <li><a href="content/daily/2021-05-18.html">Hello, 博客</a></li>
 </ul></li>
-<li>collections
-<ul class="org-ul">
-<li><a href="content/collections/index.html">收藏夹</a></li>
-</ul></li>
 </ul></li>
 </ul>
 </div>
@@ -95,7 +96,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 17:07</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-22 19:03</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
